Fixed issue that allowed text to overflow with continuous strings on playlist name and desc

--- a/react-app/src/components/ConstantUserNav/AudioBar/AudioBar.css
+++ b/react-app/src/components/ConstantUserNav/AudioBar/AudioBar.css
@@ -10,7 +10,6 @@
 }
 
 .visible-audio-bar {
-    display: flex;
     width: 100%;
     height: 100%;
     display: flex;
@@ -22,6 +21,11 @@
 .audio-bar {
     height: 100%;
 }
+
+.playing-song-details {
+    width: 20%;
+}
+
 
 .audio-bar-song-details {
     display: flex;
@@ -44,7 +48,7 @@
 }
 
 .audio-bar-song-controls {
-    width: 40%;
+    width: 60%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -117,7 +121,7 @@
 }
 
 .sing-duration-slider {
-    width: 80%;
+    width: 60%;
     display: grid;
     align-self: center;
     accent-color: #ffffff;
